--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,10 @@
             <artifactId>spring-boot</artifactId>
             <version>1.5.8.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
